noinst_HEADERS =  \
bios.h \
bios_disk.h \
util_pointer.h \
callback.h \
cpu.h \
cross.h \
control.h \
debug.h \
dma.h \
dos_inc.h \
dos_system.h \
dosbox.h \
fpu.h \
hardware.h \
inout.h \
keyboard.h \
logging.h \
mapper.h \
mem.h \
mixer.h \
modules.h \
mouse.h \
paging.h \
pic.h \
programs.h \
qcow2_disk.h \
render.h \
regs.h \
render.h \
setup.h \
shell.h \
support.h \
timer.h \
vga.h \
video.h \
mmx.h \
menu.h \
menudef.h \
resource.h \
crypt.h


