noinst_HEADERS =  \
bios.h \
bios_disk.h \
util_pointer.h \
callback.h \
cpu.h \
cross.h \
control.h \
debug.h \
dma.h \
dos_inc.h \
dos_system.h \
dosbox.h \
ethernet.h \
fpu.h \
hardware.h \
inout.h \
joystick.h \
ipx.h \
ipxserver.h \
keyboard.h \
logging.h \
mapper.h \
mem.h \
midi.h \
mixer.h \
mouse.h \
parport.h \
paging.h \
pci_bus.h \
pic.h \
programs.h \
qcow2_disk.h \
render.h \
regs.h \
render.h \
serialport.h \
setup.h \
shell.h \
support.h \
timer.h \
vga.h \
video.h \
ne2000.h \
mmx.h \
menu.h \
menudef.h \
resource.h \
voodoo.h \
ioapi.h \
iowin32.h \
unzip.h \
zip.h \
crypt.h \
mztools.h


