AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_LIBRARIES = libbuiltin.a
libbuiltin_a_SOURCES = \
	cwsdpmi_exe.cpp	\
	dos32a_exe.cpp \
	dos4gw_exe.cpp \
	hexmem16_exe.cpp \
	hexmem32_exe.cpp \
	debug_exe.cpp \
	tree_exe.cpp \
	move_exe.cpp \
	mem_com.cpp \
	find_exe.cpp \
	dosidle_exe.cpp \
	lastdriv_com.cpp \
	fcbs_com.cpp

