AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_LIBRARIES = libbuiltin.a
libbuiltin_a_SOURCES = \
	dsxmenu_exe_pc98.cpp \
	dsxmenu_exe_pc.cpp \
	cwsdpmi_exe.cpp	\
	dos32a_exe.cpp \
	dos4gw_exe.cpp \
	hexmem16_exe.cpp \
	hexmem32_exe.cpp \
	debug_exe.cpp \
	replace_exe.cpp \
	sort_exe.cpp \
	move_exe.cpp \
	mem_com.cpp \
	find_exe.cpp \
	dosidle_exe.cpp \
	lastdriv_com.cpp \
	fc_exe.cpp \
	fcbs_com.cpp \
	files_com.cpp \
	print_com.cpp \
	xcopy_exe.cpp \
	append_exe.cpp \
	edit_com.cpp \
	diskcopy_exe.cpp \
	device_com.cpp \
	buffers_com.cpp \
	defrag_exe.cpp \
	fdisk_exe.cpp \
	format_exe.cpp \
	chkdsk_exe.cpp \
	sys_com.cpp \
	28_com.cpp \
	50_com.cpp \
	25_com.cpp

