AM_CPPFLAGS = -I$(top_srcdir)/include "-DRESDIR=\"$(resdir)\""

resdir = $(datarootdir)/dosbox-x

noinst_LIBRARIES = libmisc.a
noinst_HEADERS = ethernet_pcap.h ethernet_slirp.h
libmisc_a_SOURCES = cross.cpp ethernet.cpp ethernet_pcap.cpp ethernet_slirp.cpp messages.cpp programs.cpp setup.cpp support.cpp regionalloctracking.cpp shiftjis.cpp iconvpp.cpp
